[gd_scene load_steps=3 format=3 uid="uid://b14lfx64ryd0i"]

[ext_resource type="Script" path="res://scenes/ui/edit_collection.gd" id="1_sqlp7"]
[ext_resource type="PackedScene" uid="uid://gogrtkussupq" path="res://scenes/viewport_manager.tscn" id="4_5r06b"]

[node name="EditCollection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_sqlp7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(3.85046e-07, 0.58805, 0.590802, 1)
metadata/_edit_lock_ = true

[node name="TimeElapsedLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 20.0
offset_top = 10.0
offset_right = 152.0
offset_bottom = 38.0
theme_override_font_sizes/font_size = 20
text = "99h 99m 99s"

[node name="DateLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -152.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 41.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "1/1/2024"
horizontal_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -65.0
offset_right = -10.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter log entry here"
alignment = 1
max_length = 40
context_menu_enabled = false
middle_mouse_paste_enabled = false
caret_blink = true

[node name="ViewportManager" parent="." node_paths=PackedStringArray("node") instance=ExtResource("4_5r06b")]
node = NodePath("..")

[connection signal="text_changed" from="HBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
